# open-source-sanitizer

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  COMPLEMENTARY_SCANNING_TOOLS.md  HOSTNAME_FP_PLAN.md  LICENSE  PLAN.md  README.md  internal_domains_blacklist.yaml.example  opencode.json  public_domains_allowlist.yaml  pyproject.toml  sonar-project.properties
.claude/: settings.json
.claude/hooks/: check-quality.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  issue-to-merge.lock.yml  issue-to-merge.md  lint.yml  release.yml
docs/feature/add-fix-option/deliver/: roadmap.json
src/oss_sanitizer/: cli.py  cli_args.py  config.py  models.py  report.py  scanner.py  scanner_history.py  version.py
src/oss_sanitizer/config/: __init__.py  config.py  patterns.py
src/oss_sanitizer/scanners/: algo_prompt.py  algorithms.py  dependencies.py  hostname_filters.py  pom_model.py  secrets.py  url_utils.py  urls.py
src/oss_sanitizer/scanners/pom/: __init__.py  dependencies.py  line_roles.py  model.py  parser.py
src/oss_sanitizer/templates/: dependencies.md.j2  report.md.j2
tests/: conftest.py  test_algorithms.py  test_config.py  test_dependencies.py  test_models.py  test_report.py  test_secrets.py  test_urls.py
tests/fixtures/: sample_app.py  sample_pom.xml  sample_properties.properties  sample_spring_config.xml
